Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121187

Spectrum App Crashes after recording sound in "Record and Playback" Mode

XMLWordPrintable

    • Android, Windows
    • ebabd4c29 (dev), 34fe0ff7a (6.7), ac4ea23bc (6.6), 393ae5646 (tqtc/lts-6.5)
    • 2024wk04FOQtforAndroid

      Description:-

      The Spectrum app crashes consistently when the user clicks on the "Record and Playback" mode. The crash occurs after successfully recording sound, and the application becomes unresponsive, leading to crash.

      Logs:-

      D Qt_Multimedia_spectrum_analyzer: SpectrumAnalyser::calculate QThread(0x7533bde950, name = "QtMainLoopThread") state 0
      D Qt_Multimedia_spectrum_analyzer: Engine::spectrumChanged pos 1730816
      D Qt_Multimedia_spectrum_analyzer: Engine::audioStateChanged from ActiveState to StoppedState
      F libc    : Fatal signal 11 (SIGSEGV), code 1 (SEGV_MAPERR), fault addr 0x17b00000002 in tid 19846 (qtMainLoopThrea), pid 19821 (xample.spectrum) 

      Steps to Reproduce:

      1. Build and Run the Spectrum Example on Android.
      2. Select "Record and play back" mode.
      3. Start recording.

      Expected Results: In the "Record and Playback" mode, the Spectrum app should record sound successfully and allow users to play back the recorded audio without crashing.

      Actual Results: After recording sound the app subsequently crashes check the attached video.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bartlomiejmoskal Bartlomiej Moskal
            alrizwan Alber Rizwan
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: