Android: Do not process bytes for recording when device was stopped

It may happen that someone will stop recording from QIODevice::readyRead
signal. In that case, m_recorderObject will be deleted and m_bufferQueue
will be cleared.

That is why we should not proceed with processBuffer if device was
already stopped or suspended.

Fixes: QTBUG-121187
Pick-to: 6.7 6.6 6.5
Change-Id: I712dc1ab47941c9eacaed6a4b2a6c9e72af21573
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>